trunk/TypeChecker/antlr/SPLADParser.java
// Generated from SPLAD.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPLADParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__50=1, T__49=2, T__48=3, T__47=4, T__46=5, T__45=6, T__44=7, T__43=8, 
		T__42=9, T__41=10, T__40=11, T__39=12, T__38=13, T__37=14, T__36=15, T__35=16, 
		T__34=17, T__33=18, T__32=19, T__31=20, T__30=21, T__29=22, T__28=23, 
		T__27=24, T__26=25, T__25=26, T__24=27, T__23=28, T__22=29, T__21=30, 
		T__20=31, T__19=32, T__18=33, T__17=34, T__16=35, T__15=36, T__14=37, 
		T__13=38, T__12=39, T__11=40, T__10=41, T__9=42, T__8=43, T__7=44, T__6=45, 
		T__5=46, T__4=47, T__3=48, T__2=49, T__1=50, T__0=51, STRINGTOKEN=52, 
		LETTER=53, DIGIT=54, NOTZERODIGIT=55, COMMENT=56, WS=57, OTHER=58;
	public static final String[] tokenNames = {
		"<INVALID>", "'from'", "'['", "'*'", "'A'", "'<'", "'false'", "'!='", 
		"'<='", "'to'", "'double'", "'nothing'", "'case'", "'char'", "'AND'", 
		"')'", "'bool'", "'='", "'const'", "'call'", "'begin'", "'!'", "'<--'", 
		"'LOW'", "'using'", "']'", "'default'", "','", "'while'", "'-'", "'('", 
		"':'", "'if'", "'int'", "'break'", "'OR'", "'else'", "'HIGH'", "'true'", 
		"'function'", "'.'", "'step'", "'+'", "'return'", "';'", "'container'", 
		"'>'", "'switch'", "'string'", "'/'", "'>='", "'end'", "STRINGTOKEN", 
		"LETTER", "DIGIT", "NOTZERODIGIT", "COMMENT", "WS", "' '"
	};
	public static final int
		RULE_program = 0, RULE_roots = 1, RULE_root = 2, RULE_dcl = 3, RULE_type = 4, 
		RULE_constant = 5, RULE_primitivetype = 6, RULE_id = 7, RULE_assign = 8, 
		RULE_assignend = 9, RULE_expr = 10, RULE_term = 11, RULE_comp = 12, RULE_addsub = 13, 
		RULE_muldiv = 14, RULE_factor = 15, RULE_callid = 16, RULE_arrayidend = 17, 
		RULE_arraycall = 18, RULE_numeric = 19, RULE_addsubend = 20, RULE_muldivend = 21, 
		RULE_timesdivide = 22, RULE_plusminusorempty = 23, RULE_plusminus = 24, 
		RULE_numericend = 25, RULE_string = 26, RULE_functioncall = 27, RULE_callexpr = 28, 
		RULE_subcallexpr = 29, RULE_subcallexprend = 30, RULE_cast = 31, RULE_compend = 32, 
		RULE_comparisonoperator = 33, RULE_termend = 34, RULE_termsymbol = 35, 
		RULE_exprend = 36, RULE_exprsymbol = 37, RULE_function = 38, RULE_functionmid = 39, 
		RULE_functionend = 40, RULE_params = 41, RULE_subparams = 42, RULE_subparamsend = 43, 
		RULE_stmts = 44, RULE_stmt = 45, RULE_nontermif = 46, RULE_endif = 47, 
		RULE_nontermelse = 48, RULE_nontermwhile = 49, RULE_from = 50, RULE_nontermswitch = 51, 
		RULE_cases = 52, RULE_endcase = 53, RULE_block = 54, RULE_breakend = 55;
	public static final String[] ruleNames = {
		"program", "roots", "root", "dcl", "type", "constant", "primitivetype", 
		"id", "assign", "assignend", "expr", "term", "comp", "addsub", "muldiv", 
		"factor", "callid", "arrayidend", "arraycall", "numeric", "addsubend", 
		"muldivend", "timesdivide", "plusminusorempty", "plusminus", "numericend", 
		"string", "functioncall", "callexpr", "subcallexpr", "subcallexprend", 
		"cast", "compend", "comparisonoperator", "termend", "termsymbol", "exprend", 
		"exprsymbol", "function", "functionmid", "functionend", "params", "subparams", 
		"subparamsend", "stmts", "stmt", "nontermif", "endif", "nontermelse", 
		"nontermwhile", "from", "nontermswitch", "cases", "endcase", "block", 
		"breakend"
	};

	@Override
	public String getGrammarFileName() { return "SPLAD.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPLADParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); roots();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootsContext extends ParserRuleContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public RootsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roots; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoots(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootsContext roots() throws RecognitionException {
		RootsContext _localctx = new RootsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_roots);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 10:
			case 13:
			case 16:
			case 18:
			case 33:
			case 39:
			case 45:
			case 48:
			case LETTER:
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(115); root();
				setState(116); roots();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(SPLADParser.COMMENT, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_root);
		try {
			setState(128);
			switch (_input.LA(1)) {
			case 10:
			case 13:
			case 16:
			case 18:
			case 33:
			case 45:
			case 48:
				enterOuterAlt(_localctx, 1);
				{
				setState(120); dcl();
				setState(121); match(44);
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(123); assign();
				setState(124); match(44);
				}
				break;
			case 39:
				enterOuterAlt(_localctx, 3);
				{
				setState(126); function();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(127); match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); type();
			setState(131); assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); constant();
			setState(134); primitivetype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constant);
		try {
			setState(138);
			switch (_input.LA(1)) {
			case 18:
				enterOuterAlt(_localctx, 1);
				{
				setState(136); match(18);
				}
				break;
			case 10:
			case 13:
			case 16:
			case 33:
			case 45:
			case 48:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitivetypeContext extends ParserRuleContext {
		public PrimitivetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitivetype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitPrimitivetype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitivetypeContext primitivetype() throws RecognitionException {
		PrimitivetypeContext _localctx = new PrimitivetypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_primitivetype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 10) | (1L << 13) | (1L << 16) | (1L << 33) | (1L << 45) | (1L << 48))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(SPLADParser.LETTER, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(LETTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public AssignendContext assignend() {
			return getRuleContext(AssignendContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); callid();
			setState(145); assignend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignendContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssignend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignendContext assignend() throws RecognitionException {
		AssignendContext _localctx = new AssignendContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignend);
		try {
			setState(150);
			switch (_input.LA(1)) {
			case 22:
				enterOuterAlt(_localctx, 1);
				{
				setState(147); match(22);
				setState(148); expr();
				}
				break;
			case 9:
			case 44:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprendContext exprend() {
			return getRuleContext(ExprendContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); term();
			setState(153); exprend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TermendContext termend() {
			return getRuleContext(TermendContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); comp();
			setState(156); termend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public AddsubContext addsub() {
			return getRuleContext(AddsubContext.class,0);
		}
		public CompendContext compend() {
			return getRuleContext(CompendContext.class,0);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); addsub();
			setState(159); compend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddsubContext extends ParserRuleContext {
		public MuldivContext muldiv() {
			return getRuleContext(MuldivContext.class,0);
		}
		public AddsubendContext addsubend() {
			return getRuleContext(AddsubendContext.class,0);
		}
		public AddsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addsub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAddsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddsubContext addsub() throws RecognitionException {
		AddsubContext _localctx = new AddsubContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_addsub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161); muldiv();
			setState(162); addsubend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MuldivContext extends ParserRuleContext {
		public MuldivendContext muldivend() {
			return getRuleContext(MuldivendContext.class,0);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public MuldivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_muldiv; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitMuldiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MuldivContext muldiv() throws RecognitionException {
		MuldivContext _localctx = new MuldivContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_muldiv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); factor();
			setState(165); muldivend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public CastContext cast() {
			return getRuleContext(CastContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public TerminalNode DIGIT() { return getToken(SPLADParser.DIGIT, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_factor);
		try {
			setState(187);
			switch (_input.LA(1)) {
			case 30:
				enterOuterAlt(_localctx, 1);
				{
				setState(167); match(30);
				setState(168); expr();
				setState(169); match(15);
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 2);
				{
				setState(171); match(21);
				setState(172); match(30);
				setState(173); expr();
				setState(174); match(15);
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(176); callid();
				}
				break;
			case 29:
			case 42:
			case DIGIT:
				enterOuterAlt(_localctx, 4);
				{
				setState(177); numeric();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 5);
				{
				setState(178); match(4);
				setState(179); match(DIGIT);
				}
				break;
			case STRINGTOKEN:
				enterOuterAlt(_localctx, 6);
				{
				setState(180); string();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 7);
				{
				setState(181); functioncall();
				}
				break;
			case 10:
			case 13:
			case 16:
			case 18:
			case 33:
			case 45:
			case 48:
				enterOuterAlt(_localctx, 8);
				{
				setState(182); cast();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 9);
				{
				setState(183); match(23);
				}
				break;
			case 37:
				enterOuterAlt(_localctx, 10);
				{
				setState(184); match(37);
				}
				break;
			case 38:
				enterOuterAlt(_localctx, 11);
				{
				setState(185); match(38);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 12);
				{
				setState(186); match(6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallidContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ArrayidendContext arrayidend() {
			return getRuleContext(ArrayidendContext.class,0);
		}
		public CallidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callid; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitCallid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallidContext callid() throws RecognitionException {
		CallidContext _localctx = new CallidContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_callid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189); id();
			setState(190); arrayidend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayidendContext extends ParserRuleContext {
		public ArraycallContext arraycall() {
			return getRuleContext(ArraycallContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ArrayidendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayidend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitArrayidend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayidendContext arrayidend() throws RecognitionException {
		ArrayidendContext _localctx = new ArrayidendContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_arrayidend);
		try {
			setState(198);
			switch (_input.LA(1)) {
			case 2:
				enterOuterAlt(_localctx, 1);
				{
				setState(192); arraycall();
				setState(193); match(2);
				setState(194); expr();
				setState(195); match(25);
				}
				break;
			case 3:
			case 5:
			case 7:
			case 8:
			case 9:
			case 14:
			case 15:
			case 17:
			case 22:
			case 25:
			case 27:
			case 29:
			case 31:
			case 35:
			case 41:
			case 42:
			case 44:
			case 46:
			case 49:
			case 50:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraycallContext extends ParserRuleContext {
		public ArraycallContext arraycall() {
			return getRuleContext(ArraycallContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ArraycallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraycall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitArraycall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArraycallContext arraycall() throws RecognitionException {
		ArraycallContext _localctx = new ArraycallContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_arraycall);
		try {
			setState(209);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(200); match(2);
				setState(201); expr();
				setState(202); match(25);
				setState(203); arraycall();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(205); match(2);
				setState(206); match(25);
				setState(207); arraycall();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
